--- a/index.html
+++ b/index.html
@@ -34,7 +34,9 @@
       </div>
     </div>
 
+    <script src="https://d3js.org/d3.v7.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <script src="tsv-to-array.js"></script>
     <script type="text/javascript">
       const ctx = document.getElementById("myCanvas").getContext("2d");
       const myChart = new Chart(ctx, {
