--- a/index.html
+++ b/index.html
@@ -2,6 +2,11 @@
   <head>
     <title>Niema Website</title>
     <style>
+      body {
+        font-family: "Helvetica", "Arial", sans-serif;
+        color: #444444;
+        background-color: #fafafa;
+      }
       #layout {
         display: flex;
         width: 100%;
@@ -11,6 +16,9 @@
       #options {
         height: 100%;
         width: 20%;
+        display: flex;
+        flex-direction: row;
+        align-items: center;
       }
 
       #graph {
@@ -28,7 +36,27 @@
   </head>
   <body>
     <div id="layout">
-      <div id="options"></div>
+      <div id="options">
+        <div>
+          <h3>Y-Axis Options</h3>
+          <form>
+            <input type="radio" id="count-option" name="yaxis" />
+            <label for="count-option">Count</label>
+            <br />
+            <input type="radio" id="proportion-option" name="yaxis" />
+            <label for="proportion-option">Proportion</label>
+          </form>
+          <h3>Graph Type</h3>
+          <form>
+            <input type="radio" id="curves-option" name="graphtype" />
+            <label for="curves-option">Curves</label>
+            <br />
+            <input type="radio" id="bars-option" name="graphtype" />
+            <label for="bars-option">Bars</label>
+          </form>
+          <button id="loadGraph">Load Graph</button>
+        </div>
+      </div>
       <div id="graph">
         <canvas id="myCanvas"></canvas>
       </div>
@@ -36,42 +64,64 @@
 
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <script type="text/javascript">
-      const ctx = document.getElementById("myCanvas").getContext("2d");
-      const myChart = new Chart(ctx, {
-        type: "bar",
-        data: {
-          labels: ["Red", "Blue", "Yellow", "Green", "Purple", "Orange"],
-          datasets: [
-            {
-              label: "# of Votes",
-              data: [12, 19, 3, 5, 2, 3],
-              backgroundColor: [
-                "rgba(255, 99, 132, 0.2)",
-                "rgba(54, 162, 235, 0.2)",
-                "rgba(255, 206, 86, 0.2)",
-                "rgba(75, 192, 192, 0.2)",
-                "rgba(153, 102, 255, 0.2)",
-                "rgba(255, 159, 64, 0.2)",
-              ],
-              borderColor: [
-                "rgba(255, 99, 132, 1)",
-                "rgba(54, 162, 235, 1)",
-                "rgba(255, 206, 86, 1)",
-                "rgba(75, 192, 192, 1)",
-                "rgba(153, 102, 255, 1)",
-                "rgba(255, 159, 64, 1)",
-              ],
-              borderWidth: 1,
-            },
-          ],
-        },
-        options: {
-          scales: {
-            y: {
-              beginAtZero: true,
+      const COUNT = "count";
+      const PROPORTION = "proportion";
+      const BARS = "bars";
+      const CURVES = "curves";
+
+      function loadGraph(yAxisData, graphType) {
+        console.log(yAxisData, graphType);
+
+        const ctx = document.getElementById("myCanvas").getContext("2d");
+        const myChart = new Chart(ctx, {
+          type: "bar",
+          data: {
+            labels: ["Red", "Blue", "Yellow", "Green", "Purple", "Orange"],
+            datasets: [
+              {
+                label: "# of Votes",
+                data: [12, 19, 3, 5, 2, 3],
+                backgroundColor: [
+                  "rgba(255, 99, 132, 0.2)",
+                  "rgba(54, 162, 235, 0.2)",
+                  "rgba(255, 206, 86, 0.2)",
+                  "rgba(75, 192, 192, 0.2)",
+                  "rgba(153, 102, 255, 0.2)",
+                  "rgba(255, 159, 64, 0.2)",
+                ],
+                borderColor: [
+                  "rgba(255, 99, 132, 1)",
+                  "rgba(54, 162, 235, 1)",
+                  "rgba(255, 206, 86, 1)",
+                  "rgba(75, 192, 192, 1)",
+                  "rgba(153, 102, 255, 1)",
+                  "rgba(255, 159, 64, 1)",
+                ],
+                borderWidth: 1,
+              },
+            ],
+          },
+          options: {
+            scales: {
+              y: {
+                beginAtZero: true,
+              },
             },
           },
-        },
+        });
+      }
+
+      document.getElementById("loadGraph").addEventListener("click", (e) => {
+        let yAxisOption;
+        let graphTypeOption;
+
+        if (document.getElementById("count-option").checked) {
+          yAxisOption = COUNT;
+        } else if (document.getElementById("proportion-option").checked) {
+          yAxisOption = PROPORTION;
+        }
+
+        loadGraph();
       });
     </script>
   </body>
