--- a/vaga-version.html
+++ b/vaga-version.html
@@ -57,10 +57,13 @@
             <input type="radio" id="count-option" name="yaxis" checked="true" />
             <label for="count-option">Count</label>
             <br />
+            <input type="radio" id="log-option" name="yaxis" />
+            <label for="log-option">Logarithmic</label>
+            <br />
             <input type="radio" id="proportion-option" name="yaxis" />
             <label for="proportion-option">Proportion</label>
           </form>
-          <h3>Graph Type</h3>
+          <!-- <h3>Graph Type</h3>
           <form>
             <input
               type="radio"
@@ -72,7 +75,7 @@
             <br />
             <input type="radio" id="bars-option" name="graphtype" />
             <label for="bars-option">Bars</label>
-          </form>
+          </form> -->
           <h3>Range of Data</h3>
           <form id="range-option">
             <input
@@ -94,7 +97,7 @@
             <input type="number" id="upper-bound" min="0" max="0" />
           </div>
           <br />
-          <button id="loadGraph">Load Graph</button>
+          <button id="loadGraph">Load SamBamViz</button>
         </div>
       </div>
       <div id="graph">
@@ -112,7 +115,7 @@
     <script src="line-graph.js"></script>
     <script src="bar-chart.js"></script>
     <script type="text/javascript">
-      let chart;
+      // let chart;
 
       function removeTotals(data) {
         return data.filter((e) => e.type !== TYPE_CODES.TOTAL);
@@ -134,25 +137,26 @@
 
       document.getElementById('loadGraph').addEventListener('click', (e) => {
         let yAxisOption = COUNT;
-        let graphTypeOption = CURVES;
+        // let graphTypeOption = BARS;
 
         let lowerDataBound = BOUNDS.low;
         let upperDataBound = BOUNDS.high;
 
-        // if (document.getElementById("count-option").checked) {
-        //   yAxisOption = COUNT;
-        // }
-        if (document.getElementById('proportion-option').checked) {
+        if (document.getElementById('count-option').checked) {
+          yAxisOption = COUNT;
+        } else if (document.getElementById('log-option').checked) {
+          yAxisOption = LOG;
+        } else if (document.getElementById('proportion-option').checked) {
           yAxisOption = PROPORTION;
         }
 
         // if (document.getElementById("curves-option").checked) {
         //   graphTypeOption = CURVES;
         // }
-        if (document.getElementById('bars-option').checked) {
-          graphTypeOption = BARS;
-          DATA_PER_POS = 5;
-        }
+        // if (document.getElementById('bars-option').checked) {
+        //   graphTypeOption = BARS;
+        //   DATA_PER_POS = 5;
+        // }
 
         if (document.getElementById('limit-option').checked) {
           lowerDataBound = parseInt(
@@ -163,17 +167,25 @@
           );
         }
 
-        if (graphTypeOption === CURVES) {
-          loadLineGraph(
-            tsvData.slice(
+        if (yAxisOption == COUNT) {
+          loadBarGraph(
+            tsvDataCount.slice(
               lowerDataBound * DATA_PER_POS,
               upperDataBound * DATA_PER_POS
             ),
             yAxisOption
           );
-        } else if (graphTypeOption === BARS) {
+        } else if (yAxisOption == LOG) {
           loadBarGraph(
-            removeTotals(tsvData).slice(
+            tsvDataCount.slice(
+              lowerDataBound * DATA_PER_POS,
+              upperDataBound * DATA_PER_POS
+            ),
+            yAxisOption
+          );
+        } else if (yAxisOption == PROPORTION) {
+          loadBarGraph(
+            tsvDataProp.slice(
               lowerDataBound * DATA_PER_POS,
               upperDataBound * DATA_PER_POS
             ),
