--- a/index.html
+++ b/index.html
@@ -56,6 +56,12 @@
           <h3>File Upload</h3>
           <label>Upload SamBamViz File:</label>
           <input type="file" id="sambamviz-upload" />
+          <br />
+          <br />
+          <label>Upload FASTA File:</label>
+          <input type="file" id="fasta-upload" />
+          <br /><br />
+          <button id="upload-files">Upload Files</button>
           <h3>Color Picker</h3>
           <div id="color-grid">
             <label>A</label>
@@ -129,15 +135,12 @@
     <script src="https://cdn.jsdelivr.net/npm/vega-lite@5"></script>
     <script src="https://cdn.jsdelivr.net/npm/vega-embed@6"></script>
     <script src="tsv-loader-vega.js"></script>
-    <script src="line-graph.js"></script>
     <script src="bar-chart.js"></script>
 
     <script type="text/javascript">
-      document
-        .getElementById('sambamviz-upload')
-        .addEventListener('change', (e) => {
-          processFiles();
-        });
+      document.getElementById('upload-files').addEventListener('click', (e) => {
+        processFiles();
+      });
 
       async function processFiles() {
         try {
@@ -156,6 +159,20 @@
           reader.onload = () => {
             tsvString = reader.result;
             resolve('done');
+          };
+
+          reader.readAsText(file);
+        });
+      }
+
+      function processFasta(file) {
+        return new Promise((resolve, reject) => {
+          let reader = new FileReader();
+
+          reader.onload = () => {
+            // for (let c of reader.result) {
+            //   genSeq.push(c);
+            // }
           };
 
           reader.readAsText(file);
