--- a/index.html
+++ b/index.html
@@ -134,6 +134,10 @@
     <script src="https://cdn.jsdelivr.net/npm/vega@5"></script>
     <script src="https://cdn.jsdelivr.net/npm/vega-lite@5"></script>
     <script src="https://cdn.jsdelivr.net/npm/vega-embed@6"></script>
+    <!-- <script src="d3.v7.min.js"></script>
+    <script src="vega-embed@6.js"></script>
+    <script src="vega-lite@5.js"></script>
+    <script src="vega@5.js"></script> -->
     <script src="tsv-loader-vega.js"></script>
     <script src="bar-chart.js"></script>
 
